force-app/main/default/objects/Question_Result__c/Question_Result__c.object-meta.xml
<CustomObject>
    <label>Question Result</label>
    <nameField>
        <displayFormat>QR{00000}</displayFormat>
        <label>Question Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>