force-app/main/default/objects/Question_Result__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Question Results</relationshipLabel>
    <relationshipName>Question_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>